engine-net-2/examples/Errors/ProcedureParametersInTypeMismatch.grs
new graph "Rules.grg"

exec { (d:double)=p("42") }

quit
